Update my wk3 diary

--- a/z5183936.md
+++ b/z5183936.md
@@ -5,9 +5,17 @@ Progress this week:
   3. We came up with multiple novel functionalities, but as for some of them, we were not sure about its uniqueness, so we consulted our tutor Sooriea and got some feadbacks.
   4. During Thursday meeting, user stores for default requirements has been finalised, but the user story for novel features was forgtten and we decided to hold a another quick stand-up meeting on Saturday night.
   5. And in order to finish the proposal report, we've assigned each person to investigate certain area so that we can finish them early in wk3.
-    Name       |    Task
-  -------------|------------
-  Su Ann       | Put everything in Jira
-  Xu + Tian    | System Architecture 
-  Qing + Ruiqi | UI & flow diagram 
+  | Name | Task |
+  |---|:---|
+  |Su Ann|Put everything in Jira|
+  |Xu + Tian| System Architecture|
+  |Qing + Ruiqi| UI & flow diagram|
    
+Wk3 Diary
+Progress this week:
+  1. On Monday night, we further discussed the user stories and integrated them in one file, as the draft idea for the proposal.
+  2. Su Ann created a frame work for proposal on the same date, so we could add our own part into it.
+  3. Based on the feedback from the tutor, we adjusted our expectation for the novel features from "food of the week" to "food of the moment", as the fromer one would be much harder to demonstrate its validity during the marking session.
+  4. And during Thurdsday lab time, we initially agreed to finish everything by that time, however, due to delay from UI and flow diagram, we put our own deadline of proposal backward from Friday to Saturday. 
+  5. On Saturday morning, Qing and I had a long discussion and finished the UI and flow design. Formatting was also done in the same day afternoon.
+  6. Xu and Tian also uploaded their demo on frontend as a starter code so that we can all play with.
