mid wk4 update for my diary

--- a/z5183936.md
+++ b/z5183936.md
@@ -19,3 +19,9 @@ Progress this week:
   4. And during Thurdsday lab time, we initially agreed to finish everything by that time, however, due to delay from UI and flow diagram, we put our own deadline of proposal backward from Friday to Saturday. 
   5. On Saturday morning, Qing and I had a long discussion and finished the UI and flow design. Formatting was also done in the same day afternoon.
   6. Xu and Tian also uploaded their demo on frontend as a starter code so that we can all play with.
+
+Wk4 Diary
+Progress this week:
+  1. During weekly Monday meeting, we tried the starter code developed by Xu Bai (Eric). Since he did his dev on Mac, we identified plenty of compatibility isuues and urged him to work on given VM instead. 
+  2. On the following day, Eric and Tian fixed the above issue by setting up an automaiton script which helped to build the essential dependencies.
+  3. Qing / Tian / Eric were working on Frontend, Su Ann and I was investigating db schemas and configuring cloud storage. And we agreed to demonstrate each one's work on lab time.
