--- a/z5183936.md
+++ b/z5183936.md
@@ -1,18 +1,20 @@
-Week 2 Diary
-Progress this week:
+**Week 2 Diary**
+_Progress this week_:
   1. Agreement has been made for changing the weekly meeting time from Friday 2pm to Monday 8:30pm.
   2. During Monday meeting, we assigned each person a specific functionality and ask them to provide a drafting user story so we can finalise them for proposal in Thursday meeting.
   3. We came up with multiple novel functionalities, but as for some of them, we were not sure about its uniqueness, so we consulted our tutor Sooriea and got some feadbacks.
   4. During Thursday meeting, user stores for default requirements has been finalised, but the user story for novel features was forgtten and we decided to hold a another quick stand-up meeting on Saturday night.
   5. And in order to finish the proposal report, we've assigned each person to investigate certain area so that we can finish them early in wk3.
-  | Name | Task |
-  |---|:---|
-  |Su Ann|Put everything in Jira|
-  |Xu + Tian| System Architecture|
-  |Qing + Ruiqi| UI & flow diagram|
+  ```
+  |   Name     |         Task--       |
+  |------------|----------------------|
+  |Su Ann      |Put everything in Jira|
+  |Xu + Tian   |System Architecture   |
+  |Qing + Ruiqi|  UI & flow diagram   |
+  ```
    
-Wk3 Diary
-Progress this week:
+**Wk3 Diary**
+_Progress this week_:
   1. On Monday night, we further discussed the user stories and integrated them in one file, as the draft idea for the proposal.
   2. Su Ann created a frame work for proposal on the same date, so we could add our own part into it.
   3. Based on the feedback from the tutor, we adjusted our expectation for the novel features from "food of the week" to "food of the moment", as the fromer one would be much harder to demonstrate its validity during the marking session.
@@ -20,8 +22,15 @@ Progress this week:
   5. On Saturday morning, Qing and I had a long discussion and finished the UI and flow design. Formatting was also done in the same day afternoon.
   6. Xu and Tian also uploaded their demo on frontend as a starter code so that we can all play with.
 
-Wk4 Diary
-Progress this week:
+**Wk4 Diary**
+_Progress this week_:
   1. During weekly Monday meeting, we tried the starter code developed by Xu Bai (Eric). Since he did his dev on Mac, we identified plenty of compatibility isuues and urged him to work on given VM instead. 
   2. On the following day, Eric and Tian fixed the above issue by setting up an automaiton script which helped to build the essential dependencies.
   3. Qing / Tian / Eric were working on Frontend, Su Ann and I was investigating db schemas and configuring cloud storage. And we agreed to demonstrate each one's work on lab time.
+  4. I finished the signin route, tested the code and created a merge request. During the dev, I noticed that Su Ann implemented a simpler version of return format, which raised my concern as it is not consistent between different return scenarios. I soon opened an issue in Github and notified both Su Ann and the frontend team. After a thorough investigation, we made an agreement to keep up with my return value structure. It may be a bit complicated. But it won't crash in case of an unwanted access to a non-existing field.
+  5. In Thursday lab, we further disgussed our workflow and all agreed to work in two teams, frontend and backend, in this way, we won't mess up our work flow in our general channel in Teams.
+  6. Other Team members progress: Su Ann created the schema of our database and implemented the signup route & reset route for testeing purpose. Eric, Qing and Tian finished their implementation on Sign in / Sign up. All of their works were in track and overall impressive. 
+
+**Wk5 Diary**
+_Progress this week_;
+  1. I suggested to be aware of the automatically expiring the users' session, as we didn't handle it in both backend and frontend. Su Ann purposed that it was way to complex for this stage and we should focus more on the recipe stuff. I did agree. I'd gone a bit off track from the original purpose. XD
