mid wk7 update to Ruiqi's diary

--- a/z5183936.md
+++ b/z5183936.md
@@ -32,5 +32,19 @@ _Progress this week_:
   6. Other Team members progress: Su Ann created the schema of our database and implemented the signup route & reset route for testeing purpose. Eric, Qing and Tian finished their implementation on Sign in / Sign up. All of their works were in track and overall impressive. 
 
 **Wk5 Diary**
-_Progress this week_;
+_Progress this week_:
   1. I suggested to be aware of the automatically expiring the users' session, as we didn't handle it in both backend and frontend. Su Ann purposed that it was way to complex for this stage and we should focus more on the recipe stuff. I did agree. I'd gone a bit off track from the original purpose. XD
+  2. Finished the accounts part in the backend. Should be ready for demo in wk5 lab.
+  3. Planned what to do in flex week.
+  4. Demonstrated how the sprint1 went in wk5 presentation
+  5. Conducted retro will all team members right after the demo
+
+**Wk6 Diary**
+_Progress this week_:
+  1. Discussed the payload format that is necessary for sprint 2.
+  2. Investigagted the tech feasibility of uploading local image and storing it on web hosted services.
+**Wk6 Diary**
+_Progress this week_:
+  1. After the argument of whether to use local storage or web-hosted image storage, we made our decision to keep on using local storage for storing thumbnails.
+  2. As mentioned above, I started to implemente the backend contributor route. However, I found out as the flask request only handle one object at a time, i.e., one pic or one json object. Hence, I realieased it is not possible to finish the contributor within one route. So I had a quick meeting with the frontend team and split the uploading recipe into two workflow. First, create the recipe using a thumbnail first, then backend will return the recipeId and then frontend will pass remaining infomation like recipe name to the backend.
+  3. Implementd the recipe contributor route in backend, all tested.
