--- a/z5183936.md
+++ b/z5183936.md
@@ -48,3 +48,14 @@ _Progress this week_:
   1. After the argument of whether to use local storage or web-hosted image storage, we made our decision to keep on using local storage for storing thumbnails.
   2. As mentioned above, I started to implemente the backend contributor route. However, I found out as the flask request only handle one object at a time, i.e., one pic or one json object. Hence, I realieased it is not possible to finish the contributor within one route. So I had a quick meeting with the frontend team and split the uploading recipe into two workflow. First, create the recipe using a thumbnail first, then backend will return the recipeId and then frontend will pass remaining infomation like recipe name to the backend.
   3. Implementd the recipe contributor route in backend, all tested.
+
+**Wk7 Diary**
+_Progress this week_:
+  1. Discussion of funciton payload
+  2. Removed accountId field for return value of login
+  3. Finished the update thumbnail / update recipe infomation route.
+
+**Wk8 Diary**
+_Progress this week_:  
+  1. Preparation of demoB
+  2. Applying more restrictions on accessing database.
