--- a/z5183936.md
+++ b/z5183936.md
@@ -59,3 +59,16 @@ _Progress this week_:
 _Progress this week_:  
   1. Preparation of demoB
   2. Applying more restrictions on accessing database.
+  3. Payload discussion for sprint 3
+
+**Wk9 Diary**
+_Progress this week_:
+  1. Finished backend route for top3LikedRecipeBasedOnMealTypes, and tested.
+  2. Finished backend route for top3NoResultIngredientSets, and tested.
+  3. Conducted some integraiton tests and found out two bugs, 1 is aboout uploading imgs with the same name, another 1 is about unlike the recipe
+  4. Fixed unfinished feature left in sprint 2
+
+**Wk10 Diary**
+_Progress this week_:  
+ 1. Starts to contribute to project report and final demo
+ 2. 
