mid wk 10 update for Ruiqi's workdiary

--- a/z5183936.md
+++ b/z5183936.md
@@ -71,4 +71,5 @@ _Progress this week_:
 **Wk10 Diary**
 _Progress this week_:  
  1. Starts to contribute to project report and final demo
- 2. 
+ 2. Finished demo on Thursday.
+ 3. Finished report on Friday.
